@@ -50,6 +50,8 @@ Bugfixes:
 - Fix bug in obtaining executable names longer than 512 characters
   when using the GNU compiler adapter (applies also to Cray and
   Fujitsu compilers).
+- The GCC compiler instrumentation plug-in was non-functional for GCC 5
+  because of an unnoticed API change.
 
 ------------------- Released version 1.4.2 ---------------------------
 
